# aeternum

./: Cargo.toml  Makefile  README.md  authors.toml
.github/workflows/: release.yaml
assets/: config.template.toml
src/: app.rs  error.rs  files.rs  image.rs  main.rs  upscale.rs
src/config/: config.rs
src/config/structs/: key_binds.rs  misc.rs  mod.rs
src/views/: settings.rs
src/windows/: about.rs
