[package]
name = "aeternum"
edition = "2021"
version = "0.1.2-beta.2"
description = "A simple and minimal upscaler built in rust"
authors = ["Ananas <ananas@ananas.moe>"]
license = "GPL-3.0"
repository = "https://github.com/cloudy-org/aeternum/"
rust-version = "1.81"

[dependencies]
cirrus_egui = {path = "./cirrus/egui"}
cirrus_error = {path = "./cirrus/error"}
cirrus_theming = {path = "./cirrus/theming"}
cirrus_config = {path = "./cirrus/config"}

rfd = "0.15.1"
egui = "0.32.0"
eframe = { version = "0.32.0", features = ["default"] }
egui_extras = { version = "0.32.0", features = ["all_loaders", "file"]}
log = "0.4.22"
env_logger = "0.11.5"
egui-notify = { git = "https://github.com/THEGOLDENPRO/egui-notify-0.20.0.git"}
serde_derive = "1.0.215"
textwrap = "0.16.1"
which = "7.0.1"
image = {version = "0.25.5", features = ["png", "jpeg", "webp"]}
glob = "0.3.1"
dirs = "5.0.1"
imagesize = "0.13.0"
clap = {version = "4.5.21", features = ["derive"]}
strum_macros = "0.26.4"
strum = "0.26.3"
toml = "0.8.19"
serde = {version = "1.0.215", features = ["derive"]}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
package = []
